--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -2,14 +2,14 @@
 import DownloadIcon from "../icons/DownloadIcon.astro";
 ---
 
-<section id="about" class="w-full pb-20 text-gray-800 dark:text-slate-300">
+<section id="about" class="w-full pb-20 text-gray-800 dark:text-slate-300 scroll-mt-20">
   <div class="max-w-6xl w-full mx-auto px-8 flex flex-col text-start">
     <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-10">
       Sobre mí
     </h2>
 
     <p class="text-lg md:text-xl mb-6 leading-relaxed">
-      Hola 👋, soy Sergio Izquierdo, <strong class="text-blue-400 font-medium"
+      Hola, soy Sergio Izquierdo, <strong class="text-blue-400 font-medium"
         >Desarrollador Full Stack</strong
       >. Cuento con más de 2 años de experiencia en Angular, .NET Core y SQL
       Server, enfocado en crear soluciones web escalables, seguras y con código
