--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -4,7 +4,7 @@ import SendIcon from "../icons/SendIcon.astro";
 
 <section
   id="contact"
-  class="w-full flex flex-col justify-center items-center py-20"
+  class="w-full flex flex-col justify-center items-center py-20 scroll-mt-20"
 >
   <div class="max-w-6xl w-full text-start px-8">
     <h2
