--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ const {
 } = meta;
 ---
 
-<html lang="es" class="scroll-smooth h-full dark">
+<html lang="es" class="scroll-smooth h-full dark scroll-mt-20">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
