--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -4,7 +4,7 @@ import BriefcaseIcon from "../icons/BriefcaseIcon.astro";
 
 <section
   id="experience"
-  class="w-full pb-20 text-gray-800 dark:text-slate-300"
+  class="w-full pb-20 text-gray-800 dark:text-slate-300 scroll-mt-20"
 >
   <div class="max-w-6xl w-full mx-auto px-8">
     <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-12">
