--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 
 <section
   id="skills"
-  class="text-gray-800 dark:text-slate-300 min-h-screen px-8 py-16 flex flex-col justify-center from-gray-950 via-gray-900 to-gray-950"
+  class="text-gray-800 dark:text-slate-300 min-h-screen px-8 py-16 flex flex-col justify-center from-gray-950 via-gray-900 to-gray-950 scroll-mt-20"
 >
   <div class="w-full max-w-6xl mx-auto px-8">
     <h2
