Actualizo a nuevo email y cambio curriculum

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -22,8 +22,8 @@ const SOCIAL_LINKS = [
     icon: GithubIcon,
   },
   {
-    href: "mailto:seizquie@gmail.com",
-    text: "seizquie@gmail.com",
+    href: "mailto:sergioizq.dev@gmail.com",
+    text: "sergioizq.dev@gmail.com",
     icon: EmailIcon,
   },
 ];
